# pft_positions

./: .gitignore  GIST_DELIVERABLE.md  README.md  pyproject.toml
fixtures/: delta-one.json  option.json  yield.json
fixtures/raw/: delta-one.raw.json  option.raw.json  yield.raw.json
schema/: README.md  position-snapshot.v0.schema.json
schema/examples/: delta-one.example.json  option.example.json  yield.example.json
src/: README.md
src/pft_positions/: __init__.py  canonical.py  cli.py  fixtures.py  io.py  schema.py  validate.py
src/pft_positions/resources/: __init__.py
src/pft_positions/resources/fixtures/: __init__.py  delta-one.json  option.json  yield.json
src/pft_positions/resources/fixtures/raw/: delta-one.raw.json  option.raw.json  yield.raw.json
src/pft_positions/resources/schema/: __init__.py  position-snapshot.v0.schema.json
test/: package-lock.json  package.json  validate-examples.test.mjs
tests/: test_reference_package.py
