[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pft-positions"
version = "0.1.0"
description = "Public reference package for PFT position snapshot v0 validation, parsing, and fixture emission."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Post Fiat" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
pft-positions = "pft_positions.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pft_positions = [
  "resources/schema/*.json",
  "resources/fixtures/*.json",
  "resources/fixtures/raw/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
